--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Pirate Chat</title>
+    <link
+      href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css"
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
